modified tsconfig to suite folder structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     // "checkJs": true /* Report errors in .js files. Works in tandem with allowJs. */,
   },
   "include": [
-    "src/**/*"
+    "client/**/*"
   ]
 }
