--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "This is a project template for server-side rendered react application with node, all written in typescript both the server and the client",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec \"npm run build\" src/index.tsx",
+    "serve": "nodemon --exec \"./node_modules/.bin/ts-node\" --ext js,jsx,ts,tsx --watch src server/server.ts",
+    "start": "node dist/server/server.js",
+    "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "build-prod": "rm -rf && cd server && tsc",
+    "build-img": "docker build -t <image-name> ."
   },
   "repository": {
     "type": "git",
@@ -16,5 +21,40 @@
   "bugs": {
     "url": "https://github.com/NdubuisiJr/server-rendered-react-typescript/issues"
   },
-  "homepage": "https://github.com/NdubuisiJr/server-rendered-react-typescript#readme"
+  "homepage": "https://github.com/NdubuisiJr/server-rendered-react-typescript#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.12",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.7",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.3.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.3",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
+  }
 }
