--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "typescript": "^4.3.3",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
